# edx-enterprise

./: .annotation_safe_list.yml  .coverage-journal  .coveragerc  .dockerignore  .gitignore  .jshintignore  .pii_annotations.yml  .python-version  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.rst  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  PR_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.rst  api-compact.yaml  api.yaml  catalog-info.yaml  codecov.yml  dependabot.yml  docker-compose.yml  keycloak-devstack-realm.json  keycloak-devstack.env  keycloak-devstack.properties  keycloak-stage.env  locale  manage.py  openedx.yaml  package-lock.json  package.json  provision-tpa.py  pylintrc  pylintrc_backup  pylintrc_tweaks  pyproject.toml  (+10 more)
.claude/: settings.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  lockfileversion-check.yml  migrations-mysql57.yml  mysql8-migrations.yml  postgresql-migrations.yml  publish.yml  release.yml  upgrade-python-requirements.yml
.ralph/: AGENT.md  PROMPT.md
.tx/: config
consent/: __init__.py  apps.py  errors.py  helpers.py  mixins.py  models.py  signals.py  urls.py
consent/admin/: __init__.py
consent/api/: permissions.py  urls.py
consent/filters/: __init__.py
consent/migrations/: 0001_initial.py  0002_migrate_to_new_data_sharing_consent.py  0003_historicaldatasharingconsent_history_change_reason.py  0004_datasharingconsentpage_historicaldatasharingconsentpage.py  0004_datasharingconsenttextoverrides.py  0005_auto_20210413_1644.py  0005_auto_20220125_2023.py  0005_auto_20230707_0755.py  0006_alter_historicaldatasharingconsent_options.py  0007_alter_historicaldatasharingconsent_options.py
consent/settings/: common.py
docs/: Makefile  conf.bak  conf.py  configuration_and_usage.rst  development.rst  getting_started.rst  index.rst  internationalization.rst  make.bat  saml_testing.rst  saml_testing_stage.rst  segment_events.rst  testing.rst
docs/decisions/: 0001-multiple-enterprise-support.rst  0002-enterprise-catalog-ida.rst  0003-canvas-integrated-channel.rst  0004-explicitly-declare-enterprise-for-role-assignments.rst  0005-bulk-enrollment.rst  0006-course-enrollment-enterprise_uuid.rst  0006-transmit-updates-only.rst  0007-lms-integrations-course-completion.rst  0008-course-key-table-for-cornerstone.rst  0009-moving-catalog-diffing-to-enterprise-catalog.rst  0009-zero-state-browsing-with-universal-link.rst  0010-moving-catalog-diffing-to-enterprise-catalog.rst  0011-enterprise-subsidy-enrollments-and-entitlements.rst  0012-enterprise-feature-flags-waffle.rst  0013-custom-groups-for-enterprise-learners.rst  0014-enterprise-catalog-sync-catalogs.rst  0015-default-enrollments.rst  0016-logistration-filters.md  0016-percentage-waffle-flags-by-customer.rst
docs/migration/: edx-enterprise_features_juniper.md
docs/pluginification/: .gitignore  CLAUDE.md  jira_epic_ids.txt  prompt.md  proposal.md
enterprise/: __init__.py  admin.py  api.py  apps.py  cache_utils.py  celery.py  constants.py  core_api.py  course_catalog_api.py  decorators.py  devstack_api.py  django_compatibility.py  ecommerce_api.py  enrollment_api.py  errors.py  event_bus.py  forms.py  lms_api.py  logging.py  managers.py  messages.py  middleware.py  models.py  platform_signal_handlers.py  roles_api.py  rules.py  signals.py  tasks.py  toggles.py  tpa_pipeline.py  urls.py  utils.py  validators.py  views.py  views_error_codes.txt
enterprise/admin/: __init__.py  actions.py  forms.py  paginator.py  utils.py  views.py  widgets.py
enterprise/api/: __init__.py  filters.py  pagination.py  permissions.py  renderers.py  throttles.py  urls.py  utils.py
enterprise/api_client/: braze.py  braze_client.py  client.py  discovery.py  ecommerce.py  enterprise.py  enterprise_access.py  enterprise_catalog.py  license_manager.py  license_manager_client.py  lms.py  open_ai.py  sap_success_factors.py  sso_orchestrator.py  xpert_ai.py
enterprise/config/: models.py
enterprise/content_metadata/: api.py
enterprise/filters/: __init__.py  accounts.py  (+8 more)
enterprise_learner_portal/: __init__.py  apps.py  urls.py  utils.py
integrated_channels/: README.md  __init__.py  catalog_service_utils.py  exceptions.py  lms_utils.py  logger.py  utils.py
keycloak-realms/: gryffindor.json  slytherin.json
requirements/: base.in  base.txt  celery44.txt  celery50.txt  celery53.txt  check-pins.py  check_pins.py  ci.in  ci.txt  common_constraints.txt  constraints.txt  dev.in  dev.txt  django.txt  doc.in  doc.txt  edx-platform-constraints.txt  js_test.in  js_test.txt  pip-tools.txt  pip.in  pip.txt  production.in  production.txt  quality.in  quality.txt  sync_platform_constraints.py  test-ficus.in  test-ficus.txt  test-ginkgo.in  test-ginkgo.txt  test-hawthorn.in  test-hawthorn.txt  test-master.in  test-master.txt  test.in  test.txt  travis.in  travis.txt  validation.in  (+1 more)
scripts/: create_enterprise_users_enrollments.py  get_enrollable_professional_courses.py  get_enrollable_verified_courses.py  provision-integration-test-ENT-11544.sh  provision-integration-test-ENT-11568.sh  provision_local_integrated_canvas_customer.sh
test_utils/: __init__.py  admin_urls.py  canvas_factories.py  decorators.py  enterprise_report_choices.py  factories.py  fake_catalog_api.py  fake_course_discovery_api.py  fake_ecommerce_api.py  fake_enrollment_api.py  fake_enterprise_api.py  fake_heartbeat_responses.py  fake_user_id_by_emails.py  file_helpers.py  integrated_channels_utils.py  mixins.py
tests/: test_actions.py  test_admin_managers.py  test_api.py  test_apps.py  test_client.py  test_course_catalog_api.py  test_decorators.py  test_ecommerce_api.py  test_enrollment_api.py  test_learner_data.py  test_lms_api.py  test_management.py  test_middleware.py  test_migrations.py  test_models.py  test_platform_signal_handlers.py  test_roles_api.py  test_sap_successfactors.py  test_settings.py  test_signals.py  test_templatetags.py  test_tpa_pipeline.py  test_transmitters.py  test_util_functions.py  test_utilities.py  test_views.py
(+1662 files in other folders)
