[build-system]
requires = ["setuptools", "setuptools-scm>8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "edx-enterprise"
description = "Your project description goes here"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    {name = "edX", email = "oscm@edx.org"},
]
keywords = [
    "Django",
    "edx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["readme", "version"]

dependencies = [
    "bleach",
    "celery",
    "code-annotations",
    "cryptography",
    "django-cache-memoize",
    "django-config-models",
    "django-countries",
    "django-crum",
    "django-fernet-fields-v2",
    "django-filter",
    "django-ipware",
    "django-model-utils",
    "django-multi-email-field",
    "django-object-actions",
    "django-simple-history",
    "django-waffle",
    "Django",
    "djangorestframework-xml",
    "djangorestframework",
    "edx-django-utils>=3.12.0",
    "edx-drf-extensions",
    "edx-opaque-keys[django]",
    "edx-rest-api-client",
    "edx-rbac",
    "tincan",
    "edx-toggles",
    "jsondiff",
    "jsonfield",
    "lxml",
    "openedx-atlas",
    "openedx-events",
    "openedx-filters",
    "paramiko",
    "path.py",
    "pillow",
    "python-dateutil",
    "python3-saml",
    "pytz",
    "requests",
    "rules",
    "slumber",
    "social-auth-app-django",
    "stevedore",
    "testfixtures",
    "unicodecsv",
    "PGPy",
    "django-oauth-toolkit",
]

[project.optional-dependencies]
braze = [
    "edx-braze-client",
]

[project.entry-points."lms.djangoapp"]
enterprise = "enterprise.apps:EnterpriseConfig"
consent = "consent.apps:ConsentConfig"

[project.entry-points."cms.djangoapp"]
enterprise = "enterprise.apps:EnterpriseConfig"
consent = "consent.apps:ConsentConfig"

[project.urls]
Homepage = "https://github.com/openedx/edx-enterprise"
Repository = "https://github.com/openedx/edx-enterprise"

[dependency-groups]
test-master = [
    "edx-api-doc-tools",
    "edx-braze-client",
]
test = [
    {include-group = "test-master"},
    "ddt<1.4.0",
    "django-mock-queries",
    "diff-cover",
    "django-model-utils",
    "factory_boy",
    "freezegun",
    "mock",
    "pytest-cov",
    "pytest-django",
    "responses",
    "testfixtures",
]
doc = [
    {include-group = "test-master"},
    "doc8",
    "docutils",
    "pytest",
    "factory-boy",
    "readme_renderer",
    "Sphinx",
    "sphinx-book-theme",
    "build",
    "twine",
]
ci = [
    "tox",
    "tox-uv",
]
js_test = [
    "jaraco.classes",
    "jaraco.collections",
    "jaraco.functools",
    "jasmine",
    "tempora",
]
dev = [
    {include-group = "test-master"},
    {include-group = "doc"},
    {include-group = "test"},
    {include-group = "ci"},
    "edx-lint",
    "edx-i18n-tools",
    "isort",
    "pycodestyle",
    "pydocstyle",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGELOG.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
include = ["enterprise*", "consent*", "integrated_channels*", "enterprise_learner_portal*"]
exclude = ["*tests*"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.semantic_release]
build_command = "pip install build && SETUPTOOLS_SCM_PRETEND_VERSION=$NEW_VERSION python -m build"

[tool.uv]
# Every `uv sync`/`uv run` invocation in this repo names an explicit --group.
# Without this, uv's implicit default group (named "dev") would be synced *in
# addition* to whatever --group is passed, silently pulling the entire
# dev/test/quality/ci superset into every target, defeating the point of
# having separate groups.
default-groups = []
# js_test (Jasmine JS-test runner) depends on an old jasmine package that
# hard-pins pyyaml far below what test-master/test/doc/dev need (transitively,
# via edx-api-doc-tools -> drf-yasg). Those requirement sets are mutually
# unsatisfiable in one resolution, so give js_test its own resolution fork.
conflicts = [
    [{group = "js_test"}, {group = "test-master"}],
    [{group = "js_test"}, {group = "test"}],
    [{group = "js_test"}, {group = "doc"}],
    [{group = "js_test"}, {group = "dev"}],
]
#  DO NOT EDIT constraint-dependencies DIRECTLY.
#  This list is managed by `edx_lint write_uv_constraints` (global + repo-specific)
#  and `requirements/sync_platform_constraints.py` (openedx-platform's own pins),
#  both run as part of `make upgrade`.
#  - GLOBAL constraints: edit edx_lint/files/common_constraints.txt
#  - REPO-SPECIFIC constraints: edit [tool.edx_lint].uv_constraints in this file
#  - PLATFORM constraints: nothing to edit, refreshed live from openedx-platform;
#    fenced below with "begin/end openedx-platform sync" markers so they're
#    visibly distinct from the GLOBAL/REPO-SPECIFIC entries above them
constraint-dependencies = [
    "Django<6.0",
    "elasticsearch<7.14.0",
    "factory-boy<4.0",
    "Sphinx>=8.0,<9.0",
    "pylint>=3,<4",
    "astroid>=3,<4",
    "setuptools<82",
    "acid-xblock==0.4.1",
    "aiohappyeyeballs==2.7.1",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "analytics-python==1.4.post1",
    "aniso8601==10.0.1",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "appdirs==1.4.4",
    "asgiref==3.11.1",
    "asn1crypto==1.5.1",
    "attrs==26.1.0",
    "babel==2.18.0",
    "backoff==1.10.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.15.0",
    "billiard==4.2.4",
    "bleach==6.4.0",
    "boto3==1.43.41",
    "botocore==1.43.41",
    "bracex==3.0",
    "bridgekeeper==0.9",
    "cachecontrol==0.14.4",
    "cachetools==7.1.4",
    "camel-converter==5.1.0",
    "casbin-django-orm-adapter==1.7.0",
    "celery==5.6.3",
    "certifi==2026.6.17",
    "cffi==2.1.0",
    "chardet==7.4.3",
    "charset-normalizer==3.4.8",
    "chem==2.0.0",
    "click==8.4.2",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "code-annotations==3.0.0",
    "codejail-includes==2.0.0",
    "crowdsourcehinter-xblock==1.0.1",
    "cryptography==49.0.0",
    "cssutils==2.15.0",
    "defusedxml==0.7.1",
    "django-appconf==1.2.0",
    "django-autocomplete-light==5.0.0",
    "django-cache-memoize==0.2.1",
    "django-celery-results==2.6.0",
    "django-classy-tags==4.1.0",
    "django-config-models==3.0.0",
    "django-cors-headers==4.9.0",
    "django-countries==9.0.0",
    "django-crum==0.7.9",
    "django-fernet-fields-v2==0.9",
    "django-filter==25.2",
    "django-ipware==7.0.1",
    "django-js-asset==4.0.1",
    "django-method-override==1.0.4",
    "django-model-utils==5.0.0",
    "django-mptt==0.18.0",
    "django-multi-email-field==0.8.0",
    "django-mysql==4.19.0",
    "django-oauth-toolkit==1.7.1",
    "django-object-actions==5.1.2",
    "django-pipeline==4.1.0",
    "django-push-notifications==3.3.0",
    "django-ratelimit==4.1.0",
    "django-sekizai==4.1.0",
    "django-ses==4.7.2",
    "django-simple-history==3.12.0",
    "django-statici18n==2.7.1",
    "django-storages==1.14.6",
    "django-user-tasks==4.0.0",
    "django-waffle==5.0.0",
    "django-webpack-loader==3.2.4",
    "djangorestframework==3.17.1",
    "djangorestframework-xml==2.0.0",
    "dnspython==2.8.0",
    "done-xblock==3.0.0",
    "drf-jwt==1.19.2",
    "drf-spectacular==0.30.0",
    "drf-yasg==1.21.15",
    "edx-ace==1.15.0",
    "edx-api-doc-tools==3.0.0",
    "edx-auth-backends==5.0.0",
    "edx-bulk-grades==2.0.0",
    "edx-ccx-keys==2.0.2",
    "edx-celeryutils==2.0.0",
    "edx-codejail==4.1.0",
    "edx-completion==5.0.0",
    "edx-django-release-util==1.5.0",
    "edx-django-sites-extensions==6.0.0",
    "edx-django-utils==8.0.1",
    "edx-drf-extensions==10.6.0",
    "edx-event-bus-kafka==6.1.0",
    "edx-event-bus-redis==1.0.0",
    "edx-i18n-tools==2.0.0",
    "edx-milestones==2.0.0",
    "edx-opaque-keys==4.0.0",
    "edx-organizations==8.0.0",
    "edx-proctoring==5.2.0",
    "edx-rbac==3.0.0",
    "edx-rest-api-client==7.0.0",
    "edx-search==5.0.2",
    "edx-sga==0.29.0",
    "edx-submissions==4.0.0",
    "edx-tincan-py35==2.0.0",
    "edx-toggles==6.0.0",
    "edx-when==4.0.0",
    "edxval==5.0.1",
    "encutils==1.0.0",
    "enmerkar==0.7.1",
    "enmerkar-underscore==2.4.0",
    "enterprise-integrated-channels==0.1.62",
    "event-tracking==4.0.2",
    "fastavro==1.12.2",
    "filelock==3.29.6",
    "firebase-admin==7.5.0",
    "frozenlist==1.8.0",
    "fs==2.4.16",
    "fs-s3fs==1.1.1",
    "geoip2==5.2.0",
    "glob2==0.7",
    "google-api-core==2.31.0",
    "google-auth==2.55.1",
    "google-cloud-core==2.6.0",
    "google-cloud-firestore==2.28.0",
    "google-cloud-storage==3.12.0",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.10.0",
    "googleapis-common-protos==1.75.0",
    "grpcio==1.82.0",
    "grpcio-status==1.82.0",
    "gunicorn==26.0.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "help-tokens==4.0.0",
    "hpack==4.2.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "icalendar==7.2.0",
    "idna==3.18",
    "importlib-metadata==9.0.0",
    "inflection==0.5.1",
    "invoke==3.0.3",
    "ipaddress==1.0.23",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "joblib==1.5.3",
    "jsondiff==2.2.1",
    "jsonfield==3.2.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jwcrypto==1.5.8",
    "kombu==5.6.2",
    "laboratory==1.0.2",
    "lazy==2.0",
    "lti-consumer-xblock==11.3.1",
    "lxml==5.3.2",
    "lxml-html-clean==0.4.4",
    "mailsnake==1.6.4",
    "mako==1.3.12",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "maxminddb==3.1.1",
    "meilisearch==0.42.0",
    "mongoengine==0.29.3",
    "monotonic==1.6",
    "more-itertools==11.1.0",
    "mpmath==1.3.0",
    "msgpack==1.2.1",
    "multidict==6.7.1",
    "mysqlclient==2.2.8",
    "nh3==0.3.6",
    "nltk==3.9.4",
    "nodeenv==1.10.0",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "olxcleaner==0.3.0",
    "openedx-atlas==0.7.0",
    "openedx-authz==1.20.1",
    "openedx-calc==5.0.0",
    "openedx-core==1.1.0",
    "openedx-django-pyfs==4.0.0",
    "openedx-django-require==3.0.0",
    "openedx-django-wiki==3.1.2",
    "openedx-events==11.2.0",
    "openedx-filters==3.7.0",
    "openedx-forum==0.4.3",
    "optimizely-sdk==5.5.0",
    "ora2==7.1.0",
    "packaging==26.2",
    "paramiko==5.0.0",
    "path==16.11.0",
    "path-py==12.5.0",
    "pgpy==0.6.0",
    "piexif==1.1.3",
    "pillow==12.3.0",
    "platformdirs==4.10.0",
    "polib==1.2.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "proto-plus==1.28.0",
    "protobuf==7.35.1",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.12",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycasbin==2.8.0",
    "pycountry==26.2.16",
    "pycparser==3.0",
    "pycryptodomex==3.23.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyjwt==2.13.0",
    "pylatexenc==2.10",
    "pylti1p3==2.0.0",
    "pymemcache==4.0.0",
    "pymongo==4.4.0",
    "pynacl==1.6.2",
    "pynliner==0.8.0",
    "pyopenssl==26.3.0",
    "pyparsing==3.3.2",
    "pyrsistent==0.20.0",
    "pysrt==1.1.2",
    "python-dateutil==2.9.0.post0",
    "python-ipware==3.0.0",
    "python-slugify==8.0.4",
    "python-swiftclient==4.10.0",
    "python3-openid==3.2.0",
    "python3-saml==1.16.0",
    "pytz==2026.2",
    "pyuca==1.2",
    "random2==1.0.2",
    "recommender-xblock==5.0.0",
    "redis==8.0.1",
    "referencing==0.37.0",
    "regex==2026.6.28",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "rpds-py==2026.6.3",
    "rules==3.5",
    "s3transfer==0.19.0",
    "sailthru-client==2.2.3",
    "scipy==1.17.1",
    "semantic-version==2.10.0",
    "shapely==2.1.2",
    "simpleeval==1.0.7",
    "simplejson==4.1.1",
    "six==1.17.0",
    "slumber==0.7.1",
    "snowflake-connector-python==4.6.0",
    "social-auth-app-django==5.4.1",
    "social-auth-core==5.0.2",
    "sorl-thumbnail==13.0.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.4",
    "sqlparse==0.5.5",
    "staff-graded-xblock==4.0.1",
    "stevedore==5.9.0",
    "super-csv==5.0.0",
    "sympy==1.14.0",
    "testfixtures==12.2.0",
    "text-unidecode==1.3",
    "tincan==1.0.0",
    "tinycss2==1.5.1",
    "tomlkit==0.15.0",
    "tqdm==4.68.3",
    "typesense==2.0.0",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "tzlocal==5.4.4",
    "unicodecsv==0.14.1",
    "unicodeit==0.7.5",
    "uritemplate==4.2.0",
    "urllib3==2.7.0",
    "vine==5.1.0",
    "voluptuous==0.16.0",
    "walrus==0.9.8",
    "wcmatch==10.2.1",
    "wcwidth==0.8.2",
    "web-fragments==4.0.0",
    "webencodings==0.5.1",
    "webob==1.8.10",
    "wheel==0.47.0",
    "wrapt==2.2.2",
    "xblock==6.3.0",
    "xblock-drag-and-drop-v2==5.0.6",
    "xblock-google-drive==0.8.2",
    "xblock-poll==1.16.1",
    "xblocks-contrib==0.17.0",
    "xmlsec==1.3.14",
    "xss-utils==1.0.0",
    "yarl==1.24.2",
    "zipp==4.1.0",
]

[tool.edx_lint]
uv_constraints = [
    "factory-boy<4.0",
    # pinning Sphinx 8.x version
    # Sphinx 9.x introduces significant changes and removals compared to Sphinx 8.x,
    # particularly in internal APIs and default behaviors, including a substantial rewrite of the autodoc extension.
    # https://github.com/openedx/edx-enterprise/issues/2494
    "Sphinx>=8.0,<9.0",
    # pylint 4 throws all sorts of errors and warnings at us
    "pylint>=3,<4",
    "astroid>=3,<4",
    # setuptools 82.0.0 removed pkg_resources from its distribution, but twine
    # still imports it -- breaks `twine check` in the docs quality gate.
    "setuptools<82",
]

[tool.isort]
line_length = 120
known_edx = []
known_django = ["django"]
known_djangoapp = ["model_utils"]
known_first_party = ["consent", "enterprise", "enterprise_learner_portal", "integrated_channels"]
include_trailing_comma = true
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "DJANGOAPP", "EDX", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "enterprise.settings.test"
addopts = "--cov enterprise --cov enterprise_learner_portal --cov consent --cov integrated_channels --cov-report term-missing --cov-report xml"
norecursedirs = [".*", "docs", "requirements", "site-packages", "scripts", "node_modules"]
testpaths = ["tests"]
